--- a/user-console/search-with-lepton/template.yaml
+++ b/user-console/search-with-lepton/template.yaml
@@ -5,21 +5,24 @@ metadata:
   displayName: "Search with Lepton"
   categories: ["AI"]
   description: "Search with Lepton 是一个开源的对话式搜索引擎（conversational search engine）。"
-  icon: "file://$APP_DIR/icon.png"
+  icon:
+    url: "file://$APP_DIR/icon.png"
 template:
-  helm:
-    repo: "oci://docker.io/t9kpublic"
-    chart: "search-with-lepton"
-    versions:
-    - version: 0.2.0
-      config: "file://$APP_DIR/configs/v2/v0_2_0.yaml"
-      urls: []
-      readinessProbe:
-        resources:
-        - group: apps
-          version: v1
-          resource: deployments
-          name: "{{ .Release.Name }}"
-          currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
-          desiredStatus: "True"
-      dependencies: {}
+  versions:
+  - version: 0.2.0
+    pausable: false
+    chart:
+      repo: "oci://docker.io/t9kpublic"
+      name: "search-with-lepton"
+      version: 0.2.0
+    config: "file://$APP_DIR/configs/v2/v0_2_0.yaml"
+    urls: []
+    readinessProbe:
+      resources:
+      - group: apps
+        version: v1
+        resource: deployments
+        name: "{{ .Release.Name }}"
+        currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
+        desiredStatus: "True"
+    dependencies: {}
