--- a/user-console/argo-workflows/app/template.yaml
+++ b/user-console/argo-workflows/app/template.yaml
@@ -1,31 +1,35 @@
-apiVersion: app.tensorstack.dev/v1beta1
+apiVersion: app.tensorstack.dev/v1beta2
 kind: Template
 metadata:
   name: argo-workflows
   displayName: Argo Workflows
   categories: ["Tool"]
   description: "Argo Workflows 是一个开源的工作流引擎，用于编排多步骤并行作业。"
-  icon: "file://$APP_DIR/icon.png"
+  icon:
+    url: "file://$APP_DIR/icon.png"
 template:
-  helm: 
-    repo: "oci://docker.io/t9kpublic"
-    chart: "argo-workflows"
-    versions:
-    - version: 0.2.2
-      config: "file://$APP_DIR/configs/v2/v0_2_2.yaml"
-      urls: 
-      - name: argo-workflows
-        url: /apps/{{ .Release.Namespace }}/argo-workflows/{{ .Release.Name }}/
-      readinessProbe:
-        resources:
-        - group: apps
-          version: v1
-          resource: deployments
-          name: "{{ .Release.Name }}"
-          currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
-          desiredStatus: "True" 
-      dependencies:
-        crds:
-        - group: argoproj.io
-          version: v1alpha1
-          resource: workflows
+  versions:
+  - version: 0.2.2
+    pausable: false
+    chart:
+      repo: "oci://docker.io/t9kpublic"
+      name: "argo-workflows"
+      version: 0.2.2
+    config: "file://$APP_DIR/configs/v2/v0_2_2.yaml"
+    urls:
+    - name: argo-workflows
+      url: /apps/{{ .Release.Namespace }}/argo-workflows/{{ .Release.Name }}/
+    readinessProbe:
+      resources:
+      - group: apps
+        version: v1
+        resource: deployments
+        name: "{{ .Release.Name }}"
+        currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
+        desiredStatus: "True"
+    dependencies:
+      crds:
+      - group: argoproj.io
+        version: v1alpha1
+        resource: workflows
+
