--- a/user-console/autogen-studio/template.yaml
+++ b/user-console/autogen-studio/template.yaml
@@ -1,28 +1,30 @@
-apiVersion: app.tensorstack.dev/v1beta1
+apiVersion: app.tensorstack.dev/v1beta2
 kind: Template
 metadata:
   name: autogen-studio
   displayName: "AutoGen Studio"
   categories: ["AI"]
   description: "AutoGen Studio 是一个无代码的多智能体工作流原型设计和运行工具。"
-  icon: "file://$APP_DIR/icon.svg"
+  icon:
+    url: "file://$APP_DIR/icon.svg"
 template:
-  helm:
-    repo: "oci://docker.io/t9kpublic"
-    # repo: "https://t9k.github.io/apps/"
-    chart: "autogen-studio"
-    versions:
-    - version: 0.1.0
-      config: "file://$APP_DIR/configs/v2/v0_1_0.yaml"
-      urls: []
-      # - name: UI
-      #   url: /apps/{{ .Release.Namespace }}/autogen-studio/{{ .Release.Name }}/
-      readinessProbe:
-        resources:
-        - group: apps
-          version: v1
-          resource: deployments
-          name: "{{ .Release.Name }}"
-          currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
-          desiredStatus: "True"
-      dependencies: {} 
+  versions:
+  - version: 0.1.0
+    pausable: false
+    chart:
+      repo: "oci://docker.io/t9kpublic"
+      name: "autogen-studio"
+      version: 0.1.0
+    config: "file://$APP_DIR/configs/v2/v0_1_0.yaml"
+    urls: []
+    # - name: UI
+    #   url: /apps/{{ .Release.Namespace }}/autogen-studio/{{ .Release.Name }}/
+    readinessProbe:
+      resources:
+      - group: apps
+        version: v1
+        resource: deployments
+        name: "{{ .Release.Name }}"
+        currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
+        desiredStatus: "True"
+    dependencies: {} 
