--- a/user-console/chatnio/template.yaml
+++ b/user-console/chatnio/template.yaml
@@ -1,26 +1,28 @@
-apiVersion: app.tensorstack.dev/v1beta1
+apiVersion: app.tensorstack.dev/v1beta2
 kind: Template
 metadata:
   name: chatnio
   displayName: "Chat Nio"
   categories: ["AI"]
   description: "Chat Nio 是下一代的 AI 一站式解决方案，面向 B/C 端用户，全面支持多种主流 AI 模型。"
-  icon: "file://$APP_DIR/icon.png"
+  icon:
+    url: "file://$APP_DIR/icon.png"
 template:
-  helm:
-    repo: "oci://docker.io/t9kpublic"
-    # repo: "https://t9k.github.io/apps/"
-    chart: "chatnio"
-    versions:
-    - version: 0.1.0
-      config: "file://$APP_DIR/configs/v2/v0_1_0.yaml"
-      urls: []
-      readinessProbe:
-        resources:
-        - group: apps
-          version: v1
-          resource: deployments
-          name: "{{ .Release.Name }}"
-          currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
-          desiredStatus: "True"
-      dependencies: {}
+  versions:
+  - version: 0.1.0
+    pausable: false
+    chart:
+      repo: "oci://docker.io/t9kpublic"
+      name: "chatnio"
+      version: 0.1.0
+    config: "file://$APP_DIR/configs/v2/v0_1_0.yaml"
+    urls: []
+    readinessProbe:
+      resources:
+      - group: apps
+        version: v1
+        resource: deployments
+        name: "{{ .Release.Name }}"
+        currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
+        desiredStatus: "True"
+    dependencies: {}
