--- a/user-console/comfyui/template.yaml
+++ b/user-console/comfyui/template.yaml
@@ -1,4 +1,4 @@
-apiVersion: app.tensorstack.dev/v1beta1
+apiVersion: app.tensorstack.dev/v1beta2
 kind: Template
 metadata:
   name: comfyui
@@ -6,38 +6,46 @@ metadata:
   categories: ["AI"]
   defaultVersion: 1.0.1
   description: "ComfyUI 是一个功能强大且模块化的 Stable Diffusion 图形用户界面和后端，支持基于图、节点和流程图设计和执行高级流水线。"
-  icon: "file://$APP_DIR/icon.png"
+  icon:
+    url: "file://$APP_DIR/icon.png"
 template:
-  helm:
-    repo: "oci://docker.io/t9kpublic"
-    # repo: "https://t9k.github.io/apps/"
-    chart: "comfyui"
-    versions:
-    - version: 1.0.0
-      config: "file://$APP_DIR/configs/v1/v1_0_0.yaml"
-      urls: 
-      - name: UI
-        url: /apps/{{ .Release.Namespace }}/comfyui/{{ .Release.Name }}/
-      readinessProbe:
-        resources:
-        - group: apps
-          version: v1
-          resource: deployments
-          name: "{{ .Release.Name }}"
-          currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
-          desiredStatus: "True"
-      dependencies: {}
-    - version: 1.0.1
-      config: "file://$APP_DIR/configs/v2/v1_0_1.yaml"
-      urls: 
-      - name: UI
-        url: /apps/{{ .Release.Namespace }}/comfyui/{{ .Release.Name }}/
-      readinessProbe:
-        resources:
-        - group: apps
-          version: v1
-          resource: deployments
-          name: "{{ .Release.Name }}"
-          currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
-          desiredStatus: "True"
-      dependencies: {}
+  versions:
+  - version: 1.0.0
+    pausable: false
+    chart:
+      repo: "oci://docker.io/t9kpublic"
+      name: "comfyui"
+      version: 1.0.0
+    config: "file://$APP_DIR/configs/v1/v1_0_0.yaml"
+    urls:
+    - name: UI
+      url: /apps/{{ .Release.Namespace }}/comfyui/{{ .Release.Name }}/
+    readinessProbe:
+      resources:
+      - group: apps
+        version: v1
+        resource: deployments
+        name: "{{ .Release.Name }}"
+        currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
+        desiredStatus: "True"
+    dependencies: {}
+  - version: 1.0.1
+    pausable: false
+    chart:
+      repo: "oci://docker.io/t9kpublic"
+      name: "comfyui"
+      version: 1.0.1
+    config: "file://$APP_DIR/configs/v2/v1_0_1.yaml"
+    urls:
+    - name: UI
+      url: /apps/{{ .Release.Namespace }}/comfyui/{{ .Release.Name }}/
+    readinessProbe:
+      resources:
+      - group: apps
+        version: v1
+        resource: deployments
+        name: "{{ .Release.Name }}"
+        currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
+        desiredStatus: "True"
+    dependencies: {}
+
