--- a/user-console/fish-speech/template.yaml
+++ b/user-console/fish-speech/template.yaml
@@ -1,28 +1,30 @@
-apiVersion: app.tensorstack.dev/v1beta1
+apiVersion: app.tensorstack.dev/v1beta2
 kind: Template
 metadata:
   name: fish-speech
   displayName: "Fish Speech"
   categories: ["AI"]
   description: "Fish Speech 是一套全新的 TTS 解决方案，支持无微调的音色克隆。"
-  icon: "file://$APP_DIR/icon.png"
+  icon:
+    url: "file://$APP_DIR/icon.png"
 template:
-  helm:
-    repo: "oci://docker.io/t9kpublic"
-    # repo: "https://t9k.github.io/apps/"
-    chart: "fish-speech"
-    versions:
-    - version: 0.2.2
-      config: "file://$APP_DIR/configs/v2/v0_2_2.yaml"
-      urls: []
-      # - name: UI
-      #   url: /apps/{{ .Release.Namespace }}/fish-speech/{{ .Release.Name }}/
-      readinessProbe:
-        resources:
-        - group: apps
-          version: v1
-          resource: deployments
-          name: "{{ .Release.Name }}"
-          currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
-          desiredStatus: "True"
-      dependencies: {}
+  versions:
+  - version: 0.2.2
+    pausable: false
+    chart:
+      repo: "oci://docker.io/t9kpublic"
+      name: "fish-speech"
+      version: 0.2.2
+    config: "file://$APP_DIR/configs/v2/v0_2_2.yaml"
+    urls: []     
+    # - name: UI
+    #   url: /apps/{{ .Release.Namespace }}/fish-speech/{{ .Release.Name }}/
+    readinessProbe:
+      resources:
+      - group: apps
+        version: v1
+        resource: deployments
+        name: "{{ .Release.Name }}"
+        currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
+        desiredStatus: "True"
+    dependencies: {}
