--- a/user-console/mysql/template.yaml
+++ b/user-console/mysql/template.yaml
@@ -1,38 +1,45 @@
-apiVersion: app.tensorstack.dev/v1beta1
+apiVersion: app.tensorstack.dev/v1beta2
 kind: Template
 metadata:
   name: mysql
   displayName: "MySQL"
   categories: ["Database"]
   description: "MySQL 是一个开源的关系型数据库管理系统，以高性能、可靠性和易用性著称，广泛应用于网站和应用程序的数据存储与管理。"
-  icon: "file://$APP_DIR/icon.png"
+  icon:
+    url: "file://$APP_DIR/icon.png"
 template:
-  helm:
-    repo: "oci://docker.io/t9kpublic"
-    # repo: "https://charts.bitnami.com/bitnami"
-    chart: "mysql"
-    versions:
-    - version: 11.1.20
-      urls: []
-      config: "file://$APP_DIR/configs/v2/v11_1_20.yaml"
-      readinessProbe:
-        resources:
-        - group: apps
-          version: v1
-          resource: statefulsets
-          name: "{{ .Release.Name }}"
-          currentStatus: "{{- if ge .status.availableReplicas 1 }}True{{- else }}False{{- end }}"
-          desiredStatus: "True"
-      dependencies: {}
-    - version: 9.23.0
-      urls: []
-      config: "file://$APP_DIR/configs/v2/v9_23_0.yaml"
-      readinessProbe:
-        resources:
-        - group: apps
-          version: v1
-          resource: statefulsets
-          name: "{{ .Release.Name }}"
-          currentStatus: "{{- if ge .status.availableReplicas 1 }}True{{- else }}False{{- end }}"
-          desiredStatus: "True"
-      dependencies: {}
+  versions:
+  - version: 11.1.20
+    pausable: false
+    chart:
+      repo: "oci://docker.io/t9kpublic"
+      name: "mysql"
+      version: 11.1.20
+    config: "file://$APP_DIR/configs/v2/v11_1_20.yaml"
+    urls: []
+    readinessProbe:
+      resources:
+      - group: apps
+        version: v1
+        resource: statefulsets
+        name: "{{ .Release.Name }}"
+        currentStatus: "{{- if ge .status.availableReplicas 1 }}True{{- else }}False{{- end }}"
+        desiredStatus: "True"
+    dependencies: {}
+  - version: 9.23.0
+    pausable: false
+    chart:
+      repo: "oci://docker.io/t9kpublic"
+      name: "mysql"
+      version: 9.23.0
+    config: "file://$APP_DIR/configs/v2/v9_23_0.yaml"
+    urls: []
+    readinessProbe:
+      resources:
+      - group: apps
+        version: v1
+        resource: statefulsets
+        name: "{{ .Release.Name }}"
+        currentStatus: "{{- if ge .status.availableReplicas 1 }}True{{- else }}False{{- end }}"
+        desiredStatus: "True"
+    dependencies: {}
