--- a/user-console/postgresql/template.yaml
+++ b/user-console/postgresql/template.yaml
@@ -5,34 +5,41 @@ metadata:
   displayName: "PostgreSQL"
   categories: ["Database"]
   description: "PostgreSQL 是一个开源对象关系数据库，支持 ACID 事务，提供外键、联接、视图、触发器和存储过程等功能。"
-  icon: "file://$APP_DIR/icon.svg"
+  icon: 
+    url: "file://$APP_DIR/icon.svg"
 template:
-  helm:
-    repo: "oci://docker.io/t9kpublic"
-    # repo: "https://t9k.github.io/apps/"
-    chart: "postgresql"
-    versions:
-    - version: 15.5.15
-      urls: []
-      config: "file://$APP_DIR/configs/v2/v15_5_15.yaml"
-      readinessProbe:
-        resources:
-        - group: apps
-          version: v1
-          resource: statefulsets
-          name: "{{ .Release.Name }}"
-          currentStatus: "{{- if ge .status.availableReplicas 1 }}True{{- else }}False{{- end }}"
-          desiredStatus: "True"
-      dependencies: {}
-    - version: 12.12.10
-      urls: []
-      config: "file://$APP_DIR/configs/v2/v12_12_10.yaml"
-      readinessProbe:
-        resources:
-        - group: apps
-          version: v1
-          resource: statefulsets
-          name: "{{ .Release.Name }}"
-          currentStatus: "{{- if ge .status.availableReplicas 1 }}True{{- else }}False{{- end }}"
-          desiredStatus: "True"
-      dependencies: {}
+  versions:
+  - version: 15.5.15
+    pausable: false
+    chart:
+      repo: "oci://docker.io/t9kpublic"
+      name: "postgresql"
+      version: 15.5.15
+    urls: []
+    config: "file://$APP_DIR/configs/v2/v15_5_15.yaml"
+    readinessProbe:
+      resources:
+      - group: apps
+        version: v1
+        resource: statefulsets
+        name: "{{ .Release.Name }}"
+        currentStatus: "{{- if ge .status.availableReplicas 1 }}True{{- else }}False{{- end }}"
+        desiredStatus: "True"
+    dependencies: {}
+  - version: 12.12.10
+    pausable: false
+    chart:
+      repo: "oci://docker.io/t9kpublic"
+      name: "postgresql"
+      version: 12.12.10
+    urls: []
+    config: "file://$APP_DIR/configs/v2/v12_12_10.yaml"
+    readinessProbe:
+      resources:
+      - group: apps
+        version: v1
+        resource: statefulsets
+        name: "{{ .Release.Name }}"
+        currentStatus: "{{- if ge .status.availableReplicas 1 }}True{{- else }}False{{- end }}"
+        desiredStatus: "True"
+    dependencies: {}
