--- a/user-console/stable-diffusion-webui-aki/template.yaml
+++ b/user-console/stable-diffusion-webui-aki/template.yaml
@@ -5,24 +5,26 @@ metadata:
   displayName: "Stable Diffusion WebUI aki"
   categories: ["AI"]
   description: "Stable Diffusion WebUI aki 是基于开源项目 Stable Diffusion WebUI 的整合包，由 bilibili@秋葉 aaaki 制作。"
-  icon: "file://$APP_DIR/icon.png"
+  icon:
+    url: "file://$APP_DIR/icon.png"
 template:
-  helm:
-    repo: "oci://docker.io/t9kpublic"
-    # repo: "https://t9k.github.io/apps/"
-    chart: "stable-diffusion-webui-aki"
-    versions:
-    - version: 0.2.0
-      config: "file://$APP_DIR/configs/v2/v0_2_0.yaml"
-      urls: 
-      - name: UI
-        url: /apps/{{ .Release.Namespace }}/stable-diffusion-webui-aki/{{ .Release.Name }}/
-      readinessProbe:
-        resources:
-        - group: apps
-          version: v1
-          resource: deployments
-          name: "{{ .Release.Name }}"
-          currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
-          desiredStatus: "True"
-      dependencies: {}
+  versions:
+  - version: 0.2.0
+    pausable: false
+    chart:
+      repo: "oci://docker.io/t9kpublic"
+      name: "stable-diffusion-webui-aki"
+      version: 0.2.0
+    config: "file://$APP_DIR/configs/v2/v0_2_0.yaml"
+    urls: 
+    - name: UI
+      url: /apps/{{ .Release.Namespace }}/stable-diffusion-webui-aki/{{ .Release.Name }}/
+    readinessProbe:
+      resources:
+      - group: apps
+        version: v1
+        resource: deployments
+        name: "{{ .Release.Name }}"
+        currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
+        desiredStatus: "True"
+    dependencies: {}
