--- a/user-console/tensorboard/template.yaml
+++ b/user-console/tensorboard/template.yaml
@@ -6,28 +6,31 @@ metadata:
   categories: 
   - Tool
   description: "TensorBoard 是 TensorFlow 的可视化工具，展示模型训练过程中的各种数据。"
-  icon: "file://$APP_DIR/icon.svg"
+  icon:
+    url: "file://$APP_DIR/icon.svg"
 template:
-  helm: 
-    repo: "oci://docker.io/t9kpublic"
-    chart: "tensorboard"
-    versions:
-    - version: 0.2.0
-      config: "file://$APP_DIR/configs/v2/v0_2_0.yaml"
-      urls: 
-      - name: "tensorboard"
-        url: "/t9k/tensorboards/projects/{{ .Release.Namespace }}/name/{{ .Release.Name }}/"
-      readinessProbe:
-        resources:
-        - group: tensorstack.dev
-          version: v1beta1
-          resource: tensorboards
-          name: "{{ .Release.Name }}"
-          message: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .message }}{{- end }}{{- end }}"
-          currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .status }}{{- end }}{{- end }}"
-          desiredStatus: "True"
-      dependencies:
-        crds:
-        - group: tensorstack.dev
-          version: v1beta1
-          resource: tensorboards
+  versions:
+  - version: 0.2.0
+    pausable: false
+    chart:
+      repo: "oci://docker.io/t9kpublic"
+      name: "tensorboard"
+      version: 0.2.0
+    config: "file://$APP_DIR/configs/v2/v0_2_0.yaml"
+    urls: 
+    - name: "tensorboard"
+      url: "/t9k/tensorboards/projects/{{ .Release.Namespace }}/name/{{ .Release.Name }}/"
+    readinessProbe:
+      resources:
+      - group: tensorstack.dev
+        version: v1beta1
+        resource: tensorboards
+        name: "{{ .Release.Name }}"
+        message: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .message }}{{- end }}{{- end }}"
+        currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .status }}{{- end }}{{- end }}"
+        desiredStatus: "True"
+    dependencies:
+      crds:
+      - group: tensorstack.dev
+        version: v1beta1
+        resource: tensorboards
