--- a/user-console/terminal/template.yaml
+++ b/user-console/terminal/template.yaml
@@ -1,33 +1,35 @@
-apiVersion: app.tensorstack.dev/v1beta1
+apiVersion: app.tensorstack.dev/v1beta2
 kind: Template
 metadata:
   name: terminal
   displayName: Terminal
-  defaultVersion: "0.2.1"
+  defaultVersion: "v1"
   categories: ["Tool"]
   description: "Terminal 是一个在浏览器中直接打开和操作的集群终端，便于管理集群。"
-  icon: "file://$APP_DIR/icon.png"
+  icon: 
+    url: "file://$APP_DIR/icon.png"
 template:
-  helm: 
-    repo: "oci://docker.io/t9kpublic"
-    # repo: "https://t9k.github.io/apps/"
-    chart: "terminal"
-    versions:
-    - version: 0.2.1
-      config: "file://$APP_DIR/configs/v2/v0_2_1.yaml"
-      urls: 
-      - name: terminal
-        url: /apps/{{ .Release.Namespace }}/terminal/{{ .Release.Name }}/
-      readinessProbe:
-        resources:
-        - group: apps
-          version: v1
-          resource: deployments
-          name: "{{ .Release.Name }}"
-          currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
-          desiredStatus: "True"
-      dependencies:
-        crds:
-        - group: networking.istio.io
-          version: v1beta1
-          resource: virtualservices
+  versions: 
+  - version: v1
+    pausable: true
+    chart:
+      repo: "oci://docker.io/t9kpublic"
+      name: terminal
+      version: 0.2.1
+    config: "file://$APP_DIR/configs/v2/v0_2_1.yaml"
+    urls: 
+    - name: terminal
+      url: /apps/{{ .Release.Namespace }}/terminal/{{ .Release.Name }}/
+    readinessProbe:
+      resources:
+      - group: apps
+        version: v1
+        resource: deployments
+        name: "{{ .Release.Name }}"
+        currentStatus: "{{- $isAvailable := false -}}{{- range .status.conditions -}}{{- if eq .type \"Available\" -}}{{- if eq .status \"True\" -}}{{- $isAvailable = true -}}{{- end -}}{{- end -}}{{- end -}}{{- if and $isAvailable (ne .spec.replicas 0) -}}True{{- else -}}False{{- end -}}"
+        desiredStatus: "True"
+    dependencies:
+      crds:
+      - group: networking.istio.io
+        version: v1beta1
+        resource: virtualservices
